# Credential-Fortress

./: CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: defaults.yaml
credential_fortress/: main.py
credential_fortress.egg-info/: SOURCES.txt  requires.txt  top_level.txt
credential_fortress/modules/: __init__.py  analyzer.py  auth.py  bruteforce_simulator.py  dictionary_generator.py  hash_cracker.py  hash_extractor.py  hash_simulator.py  logging_audit.py  metrics.py  plugins.py  report_generator.py  safeguards.py
data/: dummy_pwdump.txt  dummy_shadow.txt
data/banners/: banner1.txt
docs/: acceptable_use.md  architecture.md  instructor_guide.md  lab_exercises.md  legal_disclaimer.md  plugins.md  slidedeck_outline.md  threat_model.md
logs/: audit.jsonl
plugins/: example_mutation.py
scripts/: generate_dummies.py
tests/: test_integration_end_to_end.py  test_logging.py  test_no_network_calls.py  test_safeguards.py
