[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credential-fortress"
version = "1.0.0"
description = "An educational, simulation-only password assessment toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary / Educational Use Only"}
authors = [
    {name = "Raj"}
]
dependencies = [
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "colorama>=0.4.6",
    "reportlab>=4.0.0",
    "passlib>=1.7.4",
    "PyYAML>=6.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0"
]

[tool.setuptools.packages.find]
include = ["credential_fortress*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true
